--- a/app/src/main/res/layout-land/fragment_lista_medicamentos.xml
+++ b/app/src/main/res/layout-land/fragment_lista_medicamentos.xml
@@ -78,6 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="parar service"
+        android:visibility="gone"
         android:backgroundTint="?attr/colorPrimary"
         app:layout_constraintTop_toTopOf="@id/fab"
         app:layout_constraintBottom_toBottomOf="@id/fab"
@@ -90,8 +91,8 @@
 
     <ImageButton
         android:id="@+id/fab"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:elevation="8dp"
         android:scaleType="center"
         android:layout_gravity="bottom|end"
@@ -109,11 +110,11 @@
 
     <ImageView
         android:id="@+id/caixa_vazia"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:src="@drawable/caixavazia2"
-        app:layout_constraintBottom_toTopOf="@id/txt_no_data"
-        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="@id/guideline2"
+        app:layout_constraintTop_toTopOf="@id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -127,11 +128,10 @@
         android:textAlignment="center"
         android:fontFamily="sans-serif"
         android:textColor="?android:textColorPrimary"
-        android:textSize="28sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="@id/guideline2"/>
 
 
     <com.google.android.gms.ads.AdView
@@ -145,5 +145,19 @@
         ads:layout_constraintBottom_toBottomOf="parent"
         ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
     </com.google.android.gms.ads.AdView>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.3" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.54" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
