--- a/app/src/main/res/layout/fragment_configuracoes.xml
+++ b/app/src/main/res/layout/fragment_configuracoes.xml
@@ -116,4 +116,17 @@
         app:layout_constraintTop_toBottomOf="@id/label_cor_tema"
         android:background="?attr/colorPrimary"/>
 
+
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:layout_constraintBottom_toBottomOf="parent"
+        ads:layout_constraintStart_toStartOf="parent"
+        ads:layout_constraintEnd_toEndOf="parent"
+        ads:adUnitId="ca-app-pub-7310668570098943/4818979467">
+    </com.google.android.gms.ads.AdView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
