--- a/app/src/main/res/layout/fragment_cadastrar_novo_medicamento.xml
+++ b/app/src/main/res/layout/fragment_cadastrar_novo_medicamento.xml
@@ -165,7 +165,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textSize="28sp"
-                android:inputType="time"
+                android:inputType="none"
+                android:enabled="false"
                 android:id="@+id/et_til_time_first_take"
                 />
 
