--- a/app/src/main/res/layout/item_detalhes_medicamentos.xml
+++ b/app/src/main/res/layout/item_detalhes_medicamentos.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:clickable="true"
     android:focusable="true"
     android:background="?attr/selectableItemBackground"
@@ -19,19 +20,22 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="20dp"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/res_nome_med_detalhe"
+        tools:text="losartana monohidratada com leite de côco"
         android:textSize="32sp"
         android:textColor="?android:textColorPrimary"
         />
 
     <TextView
         android:id="@+id/time_dosage"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/res_horario_dose"
+        tools:text="@string/res_horario_dose"
         android:textSize="32sp"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@id/tv_detail_medicine_name"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="16dp"
         app:layout_constraintEnd_toStartOf="@id/iv_status_dosage"
@@ -61,7 +65,7 @@
         android:layout_height="3dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/time_dosage"
+        app:layout_constraintTop_toBottomOf="@id/tv_detail_medicine_name"
         android:background="?attr/colorPrimary"/>
 
 
