--- a/app/src/main/res/layout-land/fragment_detalhes_medicamentos.xml
+++ b/app/src/main/res/layout-land/fragment_detalhes_medicamentos.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.FragmentDetalhesMedicamentos">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/label_data_inicio_tratamento"
@@ -69,10 +73,11 @@
         android:id="@+id/back_arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/data_atual_selecionada"
         app:layout_constraintTop_toTopOf="@id/data_atual_selecionada"
         app:layout_constraintBottom_toBottomOf="@id/data_atual_selecionada"
+        app:layout_constraintStart_toStartOf="parent"
         android:src="@drawable/baseline_arrow_back_24"
+        android:layout_marginStart="16dp"
         app:tint="?android:textColorPrimary"
         android:background="?android:attr/actionBarItemBackground"
         android:layout_marginEnd="26dp"/>
@@ -81,7 +86,8 @@
         android:id="@+id/forward_arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/data_atual_selecionada"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="16dp"
         app:layout_constraintTop_toTopOf="@id/data_atual_selecionada"
         app:layout_constraintBottom_toBottomOf="@id/data_atual_selecionada"
         android:src="@drawable/baseline_arrow_forward_24"
@@ -123,7 +129,6 @@
         app:layout_constraintTop_toBottomOf="@id/med_detalhes_recycler_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/adView"
         android:src="@drawable/ic_baseline_timer_off_24"
         app:tint="?android:textColorSecondary"/>
 
@@ -149,35 +154,15 @@
 
 
 
-    <TextView
-        android:id="@+id/label_medicamento"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="16dp"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/data_atual_selecionada"
-        android:text="@string/medicine"/>
-
-    <TextView
-        android:id="@+id/label_horario_dose"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="16dp"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/data_atual_selecionada"
-        android:text="@string/dose_time"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
         android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:id="@+id/med_detalhes_recycler_view"
-        app:layout_constraintTop_toBottomOf="@id/label_medicamento"
+        app:layout_constraintTop_toBottomOf="@id/data_atual_selecionada"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/item_detalhes_medicamentos"
@@ -189,9 +174,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
-        ads:layout_constraintBottom_toTopOf="@id/dica_tomar_dose"
+        ads:layout_constraintBottom_toBottomOf="@id/dica_tomar_dose"
         ads:layout_constraintStart_toStartOf="parent"
         ads:layout_constraintEnd_toEndOf="parent"
+        ads:layout_constraintTop_toBottomOf="@id/btn_armar_alarme"
         ads:adUnitId="ca-app-pub-7310668570098943/4647852400">
     </com.google.android.gms.ads.AdView>
 
@@ -222,6 +208,8 @@
 
     </com.google.android.material.card.MaterialCardView>
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
