--- a/app/src/main/res/layout/fragment_detalhes_medicamentos.xml
+++ b/app/src/main/res/layout/fragment_detalhes_medicamentos.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.FragmentDetalhesMedicamentos">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/label_data_inicio_tratamento"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/data_inicio_tratamento"
         android:layout_margin="16dp"
         android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
@@ -96,7 +101,6 @@
         android:layout_height="52dp"
         android:elevation="8dp"
         android:scaleType="center"
-        app:layout_constraintBottom_toTopOf="@id/adView"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginVertical="10dp"
         app:layout_constraintTop_toBottomOf="@id/med_detalhes_recycler_view"
@@ -146,35 +150,16 @@
 
 
 
-    <TextView
-        android:id="@+id/label_medicamento"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="16dp"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/data_atual_selecionada"
-        android:text="@string/medicine"/>
 
-    <TextView
-        android:id="@+id/label_horario_dose"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="16dp"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/data_atual_selecionada"
-        android:text="@string/dose_time"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:id="@+id/med_detalhes_recycler_view"
-        app:layout_constraintTop_toBottomOf="@id/label_medicamento"
+        app:layout_constraintTop_toBottomOf="@id/data_atual_selecionada"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/item_detalhes_medicamentos"
@@ -189,6 +174,7 @@
         ads:layout_constraintBottom_toTopOf="@id/dica_tomar_dose"
         ads:layout_constraintStart_toStartOf="parent"
         ads:layout_constraintEnd_toEndOf="parent"
+        ads:layout_constraintTop_toBottomOf="@id/btn_armar_alarme"
         ads:adUnitId="ca-app-pub-7310668570098943/4647852400">
     </com.google.android.gms.ads.AdView>
 
@@ -218,6 +204,8 @@
 
     </com.google.android.material.card.MaterialCardView>
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
