--- a/app/src/main/res/layout/item_detalhes_medicamentos.xml
+++ b/app/src/main/res/layout/item_detalhes_medicamentos.xml
@@ -15,7 +15,7 @@
     <TextView
         android:id="@+id/tv_detail_medicine_name"
         android:layout_width="0dp"
-        app:layout_constraintEnd_toStartOf="@id/time_dosage"
+        app:layout_constraintEnd_toStartOf="@id/iv_status_dosage"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="20dp"
@@ -33,9 +33,8 @@
         android:text="@string/res_horario_dose"
         android:textSize="32sp"
         android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="16dp"
-        app:layout_constraintEnd_toStartOf="@id/iv_status_dosage"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="@id/tv_detail_medicine_name"
+        app:layout_constraintTop_toBottomOf="@id/tv_detail_medicine_name"
         android:textColor="?android:textColorPrimary"
         />
 
@@ -50,8 +49,8 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:layout_marginHorizontal="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/time_dosage"
-        app:layout_constraintBottom_toBottomOf="@id/time_dosage"
+        app:layout_constraintTop_toTopOf="@id/tv_detail_medicine_name"
+        app:layout_constraintBottom_toBottomOf="@id/tv_detail_medicine_name"
         android:contentDescription="@string/res_description_detail_med"
         android:src="@drawable/med_not_taken"/>
 
