--- a/app/src/main/res/layout-land/fragment_configuracoes.xml
+++ b/app/src/main/res/layout-land/fragment_configuracoes.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.FragmentConfiguracoes">
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/configuracoes_label"
@@ -115,17 +120,55 @@
         app:layout_constraintTop_toBottomOf="@id/label_cor_tema"
         android:background="?attr/colorPrimary"/>
 
+    <TextView
+        android:id="@+id/label_tocar_alarme_sem_som"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/play_alarm_without_sound"
+        android:layout_marginTop="20dp"
+        android:textColor="?android:textColorPrimary"
+        android:lines="2"
+        android:maxLines="2"
+        android:textSize="22sp"
+        app:layout_constraintStart_toStartOf="@id/configuracoes_label"
+        app:layout_constraintTop_toTopOf="@id/toggle_tocar_alarme_sem_som"
+        app:layout_constraintBottom_toBottomOf="@id/toggle_tocar_alarme_sem_som"
+        app:layout_constraintEnd_toStartOf="@id/toggle_ativado_depois_de_desligar" />
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/toggle_tocar_alarme_sem_som"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:checked="true"
+        app:layout_constraintStart_toEndOf="@id/label_tocar_alarme_sem_som"
+        app:layout_constraintTop_toTopOf="@id/divisoria3"
+        app:layout_constraintBottom_toBottomOf="@id/divisoria4"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/divisoria4"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/toggle_tocar_alarme_sem_som"
+        android:background="?attr/colorPrimary"/>
+
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
-        ads:layout_constraintBottom_toBottomOf="parent"
+        ads:layout_constraintTop_toBottomOf="@id/divisoria4"
         ads:layout_constraintStart_toStartOf="parent"
         ads:layout_constraintEnd_toEndOf="parent"
         ads:adUnitId="ca-app-pub-7310668570098943/4818979467">
 
     </com.google.android.gms.ads.AdView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
