--- a/app/src/main/res/layout/fragment_detalhes_medicamentos.xml
+++ b/app/src/main/res/layout/fragment_detalhes_medicamentos.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.FragmentDetalhesMedicamentos">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+
 
     <TextView
         android:id="@+id/label_data_inicio_tratamento"
@@ -17,6 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/data_inicio_tratamento"
         android:layout_margin="16dp"
+        android:visibility="gone"
         android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
         android:text="@string/treatment_start"/>
@@ -28,6 +27,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginHorizontal="16dp"
         android:textSize="20sp"
+        android:visibility="gone"
         android:textColor="?android:textColorPrimary"
         app:layout_constraintTop_toTopOf="@id/label_data_inicio_tratamento"
         app:layout_constraintBottom_toBottomOf="@id/label_data_inicio_tratamento"
@@ -40,6 +40,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginHorizontal="16dp"
         android:textSize="20sp"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/label_data_inicio_tratamento"
         android:text="@string/end_in"/>
 
@@ -50,6 +51,7 @@
         app:layout_constraintStart_toStartOf="@id/data_inicio_tratamento"
         app:layout_constraintEnd_toEndOf="@id/data_inicio_tratamento"
         android:textSize="20sp"
+        android:visibility="gone"
         android:textColor="?android:textColorPrimary"
         app:layout_constraintTop_toTopOf="@id/label_data_termino_tratamento"
         app:layout_constraintBottom_toBottomOf="@id/label_data_termino_tratamento"
@@ -103,8 +105,8 @@
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginVertical="10dp"
-        app:layout_constraintTop_toBottomOf="@id/med_detalhes_recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/adView"
         android:src="@drawable/ic_baseline_timer_24"
         android:background="@drawable/ripple_oval"
         app:tint="@color/white"/>
@@ -121,7 +123,6 @@
         app:borderWidth="0dp"
         android:visibility="invisible"
         android:clickable="false"
-        app:layout_constraintTop_toBottomOf="@id/med_detalhes_recycler_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/adView"
@@ -154,7 +155,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="10dp"
         android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -162,9 +163,10 @@
         app:layout_constraintTop_toBottomOf="@id/data_atual_selecionada"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:itemCount="1"
+        app:layout_constraintBottom_toTopOf="@id/btn_armar_alarme"
+        tools:itemCount="4"
         tools:listitem="@layout/item_detalhes_medicamentos"
-        app:layout_constraintBottom_toTopOf="@id/btn_armar_alarme"/>
+        />
 
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
@@ -175,7 +177,6 @@
         ads:layout_constraintBottom_toTopOf="@id/dica_tomar_dose"
         ads:layout_constraintStart_toStartOf="parent"
         ads:layout_constraintEnd_toEndOf="parent"
-        ads:layout_constraintTop_toBottomOf="@id/btn_armar_alarme"
         ads:adUnitId="ca-app-pub-7310668570098943/4647852400">
     </com.google.android.gms.ads.AdView>
 
@@ -234,8 +235,7 @@
 
     </com.google.android.material.card.MaterialCardView>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
