--- a/app/src/main/res/layout-land/fragment_cadastrar_novo_medicamento.xml
+++ b/app/src/main/res/layout-land/fragment_cadastrar_novo_medicamento.xml
@@ -39,6 +39,7 @@
             android:hint="@string/medicine_name"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="40dp"
+            android:saveEnabled="true"
             app:layout_constraintEnd_toStartOf="@id/til_medicine_qnt_per_day"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/label_title_activity_add_medicine">
@@ -47,6 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textSize="28sp"
+                android:saveEnabled="true"
                 android:inputType="text"/>
 
         </com.google.android.material.textfield.TextInputLayout>
