--- a/app/src/main/res/layout/fragment_cadastrar_novo_medicamento.xml
+++ b/app/src/main/res/layout/fragment_cadastrar_novo_medicamento.xml
@@ -40,6 +40,7 @@
             android:hint="@string/medicine_name"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="40dp"
+            android:saveEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/label_title_activity_add_medicine">
@@ -48,6 +49,7 @@
                 android:id="@+id/til_medicine_name_child"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:saveEnabled="true"
                 android:textSize="28sp"
                 android:inputType="text"/>
 
