--- a/app/src/main/res/layout-land/fragment_cadastrar_novo_medicamento.xml
+++ b/app/src/main/res/layout-land/fragment_cadastrar_novo_medicamento.xml
@@ -45,6 +45,7 @@
             app:layout_constraintTop_toBottomOf="@id/label_title_activity_add_medicine">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/til_medicine_name_child"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textSize="28sp"
@@ -67,6 +68,7 @@
             app:layout_constraintBottom_toBottomOf="@id/til_medicine_name">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/til_medicine_qnt_per_day_child"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textSize="28sp"
@@ -145,6 +147,7 @@
             app:layout_constraintTop_toBottomOf="@id/label_duracao_tratamento">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/til_medicine_time_treatment_child"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textSize="28sp"
